--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Game lab Project</title>
   </head>
   <body>
-    <h1>Gamelab Project</h1>
+    <h1>Gamelab Project untuk kolaborasi</h1>
     <p>Untuk testing Kolaborasi dengan Git</p>
   </body>
 </html>
